[gd_scene load_steps=10 format=3 uid="uid://br1ijkgjtu3l1"]

[ext_resource type="Script" uid="uid://cyfhw668q70n1" path="res://scripts/game_controller.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://ccwoeirjunajd" path="res://scenes/player.tscn" id="2_jyhfs"]
[ext_resource type="Material" uid="uid://cjx54rqie1i61" path="res://shaders/block.tres" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://cynfv80bkiyqm" path="res://icon.svg" id="4_tefeu"]
[ext_resource type="Script" uid="uid://b2nif2k2amag4" path="res://scripts/debug_info.gd" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://ypbsybrc6yvl" path="res://scenes/fairy.tscn" id="6_o6xl0"]
[ext_resource type="TileSet" uid="uid://gkulhukl4y58" path="res://scenes/terrain_tile_set.tres" id="6_tipki"]
[ext_resource type="PackedScene" uid="uid://cj4twhiysgla2" path="res://scenes/tree.tscn" id="8_tipki"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o5qli"]
seed = 188
frequency = 0.002

[node name="GameController" type="Node" node_paths=PackedStringArray("player")]
script = ExtResource("1_o5qli")
noise = SubResource("FastNoiseLite_o5qli")
player = NodePath("World/Player")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="DebugInfo" type="VBoxContainer" parent="HUD"]
offset_right = 92.0
offset_bottom = 51.0
script = ExtResource("5_tbgi4")

[node name="FPSLabel" type="Label" parent="HUD/DebugInfo"]
layout_mode = 2
text = "FPS: "

[node name="PlayerPositionLabel" type="Label" parent="HUD/DebugInfo"]
layout_mode = 2
text = "Player Position: "

[node name="CurrentBlockPositionLabel" type="Label" parent="HUD/DebugInfo"]
layout_mode = 2
text = "Player Position: "

[node name="HintBlockCheckButton" type="CheckButton" parent="HUD/DebugInfo"]
layout_mode = 2
text = "Hint Block"
flat = true

[node name="DayNightCheckButton" type="CheckButton" parent="HUD/DebugInfo"]
layout_mode = 2
text = "Day / Night"
flat = true

[node name="VisibleTerrianSprite" type="Sprite2D" parent="HUD/DebugInfo"]
position = Vector2(10, 157)
texture = ExtResource("4_tefeu")
centered = false

[node name="World" type="Node2D" parent="."]
y_sort_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="World"]
color = Color(0.04315205, 0.043141916, 0.08103276, 1)

[node name="Blocks" type="Node" parent="World"]

[node name="TerrainTileMapLayer" type="TileMapLayer" parent="World"]
z_index = -100
material = ExtResource("4_tbgi4")
tile_set = ExtResource("6_tipki")

[node name="Fairy" parent="World" instance=ExtResource("6_o6xl0")]
position = Vector2(100, 100)

[node name="Player" parent="World" instance=ExtResource("2_jyhfs")]

[node name="Tree" parent="World" instance=ExtResource("8_tipki")]
position = Vector2(-62, -15)

[connection signal="toggled" from="HUD/DebugInfo/HintBlockCheckButton" to="HUD/DebugInfo" method="_on_hint_block_check_button_toggled"]
[connection signal="toggled" from="HUD/DebugInfo/DayNightCheckButton" to="HUD/DebugInfo" method="_on_day_night_check_button_toggled"]
